--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         <section class="hero">
             <div class="container flex items-center justify-between gap-4">
                 <div class="hero-content animate-fade-up">
-                    <h1 class="text-shine-hover" style="font-weight: 800;">Next Gen IT Support & Helpdesk Solutions</h1>
+                    <h1 class="text-shine-hover text-xl" style="font-weight: 800;">Next Gen IT Support & Helpdesk
+                        Solutions</h1>
                     <p>We provide 24/7 technical support, cloud infrastructure management, and cybersecurity solutions
                         to keep your business running smoothly.</p>
                     <div class="flex gap-1">
@@ -77,21 +78,21 @@
                 </div>
                 <div class="grid animate-fade-up delay-300"
                     style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem;">
-                    <div class="card">
+                    <div class="card card-hover-pop">
                         <i class='bx bx-support'
                             style="font-size: 3rem; color: var(--primary); margin-bottom: 1rem;"></i>
                         <h3>24/7 Support</h3>
                         <p style="color: var(--text-muted); margin-top: 0.5rem;">Our team is always online to help you
                             with any technical issues, anytime, anywhere.</p>
                     </div>
-                    <div class="card">
+                    <div class="card card-hover-pop">
                         <i class='bx bx-shield-quarter'
                             style="font-size: 3rem; color: var(--secondary); margin-bottom: 1rem;"></i>
                         <h3>Cyber Security</h3>
                         <p style="color: var(--text-muted); margin-top: 0.5rem;">Protect your data with our advanced
                             security protocols and monitoring systems.</p>
                     </div>
-                    <div class="card">
+                    <div class="card card-hover-pop">
                         <i class='bx bx-server' style="font-size: 3rem; color: var(--accent); margin-bottom: 1rem;"></i>
                         <h3>Cloud Solutions</h3>
                         <p style="color: var(--text-muted); margin-top: 0.5rem;">Scalable cloud infrastructure to grow
@@ -124,7 +125,7 @@
                     <p>Trusted by thousands of businesses worldwide.</p>
                 </div>
                 <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem;">
-                    <div class="card">
+                    <div class="card card-hover-pop">
                         <p style="font-style: italic; margin-bottom: 1rem;">"The best IT support we have ever
                             experienced. Fast, reliable, and super friendly team."</p>
                         <div class="flex items-center gap-1">
@@ -136,7 +137,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card card-hover-pop">
                         <p style="font-style: italic; margin-bottom: 1rem;">"They transformed our infrastructure and
                             saved us 30% on operational costs."</p>
                         <div class="flex items-center gap-1">
@@ -148,7 +149,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card card-hover-pop">
                         <p style="font-style: italic; margin-bottom: 1rem;">"Security is no longer a worry for us. IT
                             SQUAD handles everything perfectly."</p>
                         <div class="flex items-center gap-1">
