--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -885,7 +885,8 @@
             <div id="users-tab" class="tab-content" style="display: none;">
                 <div class="flex justify-between items-center" style="margin-bottom: 2rem; flex-wrap: wrap; gap: 1rem;">
                     <h2>User Management</h2>
-                    <button class="btn btn-primary"><i class='bx bx-plus'></i> Add New User</button>
+                    <h2>User Management</h2>
+                    <button id="add-user-btn" class="btn btn-primary"><i class='bx bx-plus'></i> Add New User</button>
                 </div>
                 <div class="card" style="overflow-x: auto;">
                     <table class="table" style="width: 100%; min-width: 600px;">
@@ -1067,6 +1068,39 @@
                     </div>
                 </div>
         </main>
+    </div>
+
+    <div id="add-user-modal" class="modal-overlay"
+        style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); z-index: 2000; justify-content: center; align-items: center;">
+        <div class="modal-content"
+            style="background: var(--bg-card); padding: 2rem; border-radius: 12px; width: 90%; max-width: 500px; box-shadow: var(--shadow); position: relative;">
+            <span id="close-modal"
+                style="position: absolute; top: 1rem; right: 1rem; font-size: 1.5rem; cursor: pointer; color: var(--text-muted);">&times;</span>
+            <h2 style="margin-bottom: 1.5rem;">Add New User</h2>
+            <form>
+                <div class="form-group">
+                    <label class="form-label">Full Name</label>
+                    <input type="text" class="form-control" placeholder="John Doe">
+                </div>
+                <div class="form-group">
+                    <label class="form-label">Email Address</label>
+                    <input type="email" class="form-control" placeholder="john@example.com">
+                </div>
+                <div class="form-group">
+                    <label class="form-label">Role</label>
+                    <select class="form-control">
+                        <option>User</option>
+                        <option>Agent</option>
+                        <option>Admin</option>
+                    </select>
+                </div>
+                <div style="margin-top: 1.5rem; text-align: right;">
+                    <button type="button" class="btn btn-outline" id="cancel-modal"
+                        style="margin-right: 0.5rem;">Cancel</button>
+                    <button type="button" class="btn btn-primary">Create User</button>
+                </div>
+            </form>
+        </div>
     </div>
 
     <script src="main.js"></script>
