--- a/index2.html
+++ b/index2.html
@@ -112,7 +112,7 @@
         <section class="hero home2-hero">
             <div class="home2-overlay"></div>
             <div class="container home2-content">
-                <h1>Enterprise IT Management Reimagined</h1>
+                <h1 class="text-xl">Enterprise IT Management Reimagined</h1>
                 <p style="font-size: 1.5rem; color: #cbd5e1; margin-bottom: 3rem;">Secure. Scalable. Reliable.</p>
                 <div class="flex justify-center gap-1">
                     <a href="#" class="btn btn-primary" style="background: var(--accent); border: none;">View
@@ -126,19 +126,19 @@
         <div class="container">
             <div class="stats-bar grid" style="grid-template-columns: repeat(4, 1fr);">
                 <div class="stat-item">
-                    <div class="stat-number">500+</div>
+                    <div class="stat-number" data-target="500">0+</div>
                     <div>Clients</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">99.9%</div>
+                    <div class="stat-number" data-target="99.9">0%</div>
                     <div>Uptime</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">15m</div>
+                    <div class="stat-number" data-target="15">0m</div>
                     <div>Response Time</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">24/7</div>
+                    <div class="stat-number" data-target="24">0/7</div>
                     <div>Support</div>
                 </div>
             </div>
