--- a/index.html
+++ b/index.html
@@ -78,22 +78,20 @@
                 </div>
                 <div class="grid animate-fade-up delay-300"
                     style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem;">
-                    <div class="card card-hover-pop">
-                        <i class='bx bx-support'
-                            style="font-size: 3rem; color: var(--primary); margin-bottom: 1rem;"></i>
+                    <div class="card card-hover-pop card-vibrant">
+                        <img src="Assets/icon_support_3d.png" alt="Support" class="vibrant-icon">
                         <h3>24/7 Support</h3>
                         <p style="color: var(--text-muted); margin-top: 0.5rem;">Our team is always online to help you
                             with any technical issues, anytime, anywhere.</p>
                     </div>
-                    <div class="card card-hover-pop">
-                        <i class='bx bx-shield-quarter'
-                            style="font-size: 3rem; color: var(--secondary); margin-bottom: 1rem;"></i>
+                    <div class="card card-hover-pop card-vibrant">
+                        <img src="Assets/icon_security_3d.png" alt="Security" class="vibrant-icon">
                         <h3>Cyber Security</h3>
                         <p style="color: var(--text-muted); margin-top: 0.5rem;">Protect your data with our advanced
                             security protocols and monitoring systems.</p>
                     </div>
-                    <div class="card card-hover-pop">
-                        <i class='bx bx-server' style="font-size: 3rem; color: var(--accent); margin-bottom: 1rem;"></i>
+                    <div class="card card-hover-pop card-vibrant">
+                        <img src="Assets/logo_clouddyna.png" alt="Cloud" class="vibrant-icon">
                         <h3>Cloud Solutions</h3>
                         <p style="color: var(--text-muted); margin-top: 0.5rem;">Scalable cloud infrastructure to grow
                             your business without hardware limitations.</p>
