--- a/index2.html
+++ b/index2.html
@@ -153,8 +153,9 @@
                 <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 2rem;">
                     <div class="card" style="padding: 0; overflow: hidden;">
                         <div
-                            style="height: 200px; background: #e2e8f0; display: flex; align-items: center; justify-content: center;">
-                            <i class='bx bx-news' style="font-size: 4rem; color: var(--primary);"></i>
+                            style="height: 200px; background: linear-gradient(135deg, #eef2ff 0%, #e0e7ff 100%); display: flex; align-items: center; justify-content: center;">
+                            <img src="Assets/icon_support_3d.png" alt="AI Support" class="vibrant-icon"
+                                style="width: 100px; height: 100px;">
                         </div>
                         <div style="padding: 2rem;">
                             <h3>The Future of Cloud Computing</h3>
@@ -165,8 +166,9 @@
                     </div>
                     <div class="card" style="padding: 0; overflow: hidden;">
                         <div
-                            style="height: 200px; background: #e2e8f0; display: flex; align-items: center; justify-content: center;">
-                            <i class='bx bx-lock-alt' style="font-size: 4rem; color: var(--secondary);"></i>
+                            style="height: 200px; background: linear-gradient(135deg, #ecfdf5 0%, #d1fae5 100%); display: flex; align-items: center; justify-content: center;">
+                            <img src="Assets/icon_security_3d.png" alt="Security" class="vibrant-icon"
+                                style="width: 100px; height: 100px;">
                         </div>
                         <div style="padding: 2rem;">
                             <h3>Cybersecurity Trends 2024</h3>
