--- a/404.html
+++ b/404.html
@@ -35,7 +35,7 @@
             <nav>
                 <ul class="nav-links">
                     <li class="dropdown">
-                        <a href="#" class="active">Home <i class='bx bx-chevron-down'></i></a>
+                        <a href="#">Home <i class='bx bx-chevron-down'></i></a>
                         <div class="dropdown-content">
                             <a href="index.html">Home 1</a>
                             <a href="index2.html">Home 2</a>
@@ -52,13 +52,13 @@
                         </div>
                     </li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="login.html" class="btn btn-primary" style="padding: 8px 16px; color: white;">Login</a>
-                    </li>
+                    <li><a href="login.html" class="btn btn-outline" style="padding: 8px 16px;">Login</a></li>
+                    <li><a href="register.html" class="btn btn-primary" style="padding: 8px 16px; color: white;">Sign
+                            Up</a></li>
                 </ul>
             </nav>
             <div class="controls">
-                <button id="rtl-toggle" class="btn btn-outline"
-                    style="padding: 5px 10px; font-size: 0.8rem;">🌐</button>
+                <button id="rtl-toggle" class="btn-icon-animate" title="RTL Toggle"><i class='bx bx-globe'></i></button>
                 <button id="theme-toggle" class="icon-btn"><i class='bx bx-moon'></i></button>
                 <div id="menu-toggle" class="menu-toggle"><i class='bx bx-menu'></i></div>
             </div>
