--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,9 @@
 <body>
     <header>
         <div class="container flex justify-between items-center">
-            <a href="index.html" class="logo"><i class='bx bx-code-block'></i> IT SQUAD</a>
+            <a href="index.html" class="logo">
+                <i class='bx bx-code-block'></i> IT SQUAD
+            </a>
             <nav>
                 <ul class="nav-links">
                     <li class="dropdown">
@@ -73,6 +75,7 @@
                     </li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
+
                     <li class="dropdown">
                         <a href="#">Dashboard <i class='bx bx-chevron-down'></i></a>
                         <div class="dropdown-content">
@@ -80,12 +83,14 @@
                             <a href="admin-dashboard.html">Admin Dashboard</a>
                         </div>
                     </li>
-
+                    <li><a href="contact.html" class="active">Contact</a></li>
+                    <li><a href="login.html" class="btn btn-outline" style="padding: 8px 16px;">Login</a></li>
+                    <li><a href="register.html" class="btn btn-primary" style="padding: 8px 16px; color: white;">Sign
+                            Up</a></li>
                 </ul>
             </nav>
             <div class="controls">
-                <button id="rtl-toggle" class="btn btn-outline"
-                    style="padding: 5px 10px; font-size: 0.8rem;">🌐RTL</button>
+                <button id="rtl-toggle" class="btn-icon-animate" title="RTL Toggle"><i class='bx bx-globe'></i></button>
                 <button id="theme-toggle" class="icon-btn"><i class='bx bx-moon'></i></button>
                 <div id="menu-toggle" class="menu-toggle"><i class='bx bx-menu'></i></div>
             </div>
@@ -108,7 +113,7 @@
         <section>
             <div class="container">
                 <div class="grid animate-fade-up delay-200"
-                    style="grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 4rem;">
+                    style="grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 2rem;">
 
                     <div>
                         <div class="section-title" style="text-align: left;">
